# termlnk

./: .dockerignore  .gitattributes  .gitignore  .npmrc  .release-it.json  AGENTS.md  LICENSE  README.md  TRADEMARK.md  commitlint.config.cjs  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  vitest.config.ts
.github/workflows/: build-web-docker.yml  build.yml  cache-cleanup.yml  prune-r2.yml  publish-packages.yml  publish-release.yml  release-linux.yml  release-mac.yml  release-windows.yml  release.yml
apps/desktop/: .env.example  .gitignore  electron-builder.ts  electron.vite.config.ts  package.json  tsconfig.json  tsconfig.node.json
apps/mobile/: .gitignore  Gemfile  PRIVACY_POLICY.md  SUBMISSION.md  app.json  babel.config.js  eas.json  expo-env.d.ts  global.css  metro.config.cjs  metro.config.js  package.json  tsconfig.json
apps/web/: .env.example  Dockerfile  README.md  README.zh-CN.md  docker-compose.build.yml  docker-compose.yml  index.html  install.sh  package.json  tsconfig.json  vite.config.ts
docs/: CHANGELOG.md  README.ja.md  README.ko.md  README.zh-CN.md  README.zh-TW.md  termlnk-base46-theme-specification.md  termlnk-code-style-guide.md
internal/macos-utils/: binding.gyp  (+3 more)
packages-internal/react-native-russh/rust/uniffi-bindgen/: Cargo.toml
packages-internal/react-native-russh/rust/uniffi-bindgen-swift/: Cargo.toml
patches/: @react-native-menu__menu@2.0.0.patch  @ubjs__core@0.31.0-3.patch  @wendellhu__redi.patch  babel-preset-expo@56.0.15.patch  react-native-css@3.0.7.patch
scripts/: react-version-manager.ts
(+643 files in other folders)
