[package]
name = "uniffi-bindgen-swift"
version = "0.1.0"
edition = "2021"
publish = false

# Sibling shim crate for ubrn's Swift backend; same rationale as
# ../uniffi-bindgen but invokes the Swift codegen entry point.

[dependencies]
uniffi = { workspace = true, features = ["cli"] }

[[bin]]
name = "uniffi-bindgen-swift"
path = "src/main.rs"
